Fix <code> tags overflowing inside <p> tags and fixed table overflows

--- a/_sass/quarkus.scss
+++ b/_sass/quarkus.scss
@@ -99,6 +99,9 @@ p {
   line-height: 1.5rem;
   margin: 0 0 1.5rem;
   font-weight: 400;
+  code {
+    word-wrap: break-word;
+  }
 }
 
 p.intropara {
@@ -249,6 +252,9 @@ input {
 
 table.tableblock {
   border-collapse: collapse;
+  display: block;
+  max-width: 100%;
+  overflow-x: auto;
 
   thead th,
   tbody th {
